Fix footer alignment

--- a/app/assets/stylesheets/_defaults.css.sass
+++ b/app/assets/stylesheets/_defaults.css.sass
@@ -102,14 +102,13 @@ input[disabled]
 
 // Footer is repeated in the splash and the application layouts.
 footer
-  +grid-container
   position: fixed
+  width: 100%
   bottom: 0
   background: url(asset_path('bg.png', 'image'))
   border-top: 3px dashed $green
   padding-top: 5px
   margin-top: 2px
-
 
   nav.links
     +grid(4)
